@@ -916,3 +916,4 @@ rc4_hmac_md5		915
 aes_128_cbc_hmac_sha1		916
 aes_192_cbc_hmac_sha1		917
 aes_256_cbc_hmac_sha1		918
+dhpublicnumber		919
